<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:gravity="center"
    android:theme="@style/AppTheme"
    tools:context=".RegisterActivity">

    <!-- App Name or Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title"
    android:textSize="24sp" />

    <!-- Name field -->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Email field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Password field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Confirm Password field -->
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:elevation="1dp"
        android:padding="18dp"
        android:text="@string/register"
        android:textSize="18sp" />

    <!-- Login Link -->
    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_marginTop="20dp"
        android:text="Login here"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
