<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:gravity="center"
    android:theme="@style/AppTheme"
    tools:context=".activities.LoginActivity">

    <!-- Email field below the image -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Password field below the email field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edittext"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textSize="18sp" />

    <!-- Login button below the password field -->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:elevation="1dp"
        android:padding="18dp"
        android:text="@string/login"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp"
        android:text="Don't have an account? Register here"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
