<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Search Bar -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="Search products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"/>

    <!-- Category Dropdown (Spinner) -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <!-- RecyclerView for displaying products -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        app:layout_constraintBottom_toTopOf="@id/navigationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Navigation Buttons (e.g., Cart, Profile) -->
    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ordersButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/white"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_orders"
            android:contentDescription="@string/orders" />

        <ImageButton
            android:id="@+id/cartButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:backgroundTint="@android:color/white"
            android:layout_weight="1"
            android:src="@drawable/ic_cart"
            android:contentDescription="@string/cart" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/white"
            android:layout_weight="1"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
